code25_all/ruby/3564872.txt
def to_s
   i = 0
   first_line? = true
   output = ''
   @selections.each do | selection |
      i += 1
      if first_line?
         output << selection.to_s(first_line?)
         first_line? = false
      else
         output << selection.to_s
      end
      if i >= 5
         output << "\r"
         i = 0
      else (output << " $ ")
      end
   end
   return output
end 

SyntaxError: list2sel.rb:45: syntax error, unexpected '='
    first_line? = true
                 ^
list2sel.rb:47: syntax error, unexpected keyword_do_block, expecting keyword_end
    @selections.each do | selection |
                       ^
list2sel.rb:51: syntax error, unexpected '='
        first_line? = false
                     ^

